deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: outline
  annotations:
    keel.sh/policy: minor
    keel.sh/trigger: poll
  name: outline
  namespace: outline
spec:
  replicas: 1
  selector:
    matchLabels:
      app: outline
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: outline
    spec:
      imagePullSecrets:
        - name: gitlabreg
      containers:
        - image: docker.getoutline.com/outlinewiki/outline:latest
          name: outline
          ports:
            - containerPort: 3000
        - image: redis:latest
          name: outline-redis
          ports:
            - containerPort: 6379
      restartPolicy: Always
