service.yaml
apiVersion: v1
kind: Service
metadata:
  name: outline
  namespace: outline
  labels:
    app: outline
spec:
  ports:
    - name: http
      port: 3000
  selector:
    app: outline
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: outline-redis
  name: outline-redis
  namespace: outline-redis
spec:
  selector:
    app: outline-redis
  ports:
    - port: 6379
      name: redis
  type: ClusterIP
