ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: cert-issuer
  name: outline
  namespace: outline
spec:
  ingressClassName: traefik
  rules:
    - host: outline.ryzen.me
      http:
        paths:
          - backend:
              service:
                name: outline
                port:
                  number: 3000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - outline.ryzen.me
      secretName: outline-tls
